add JDK specific StringUtils