@@ -26,6 +26,7 @@ import java.util.logging.Logger;
 import com.apicatalog.jsonld.JsonLdError;
 import com.apicatalog.jsonld.JsonLdErrorCode;
 import com.apicatalog.jsonld.JsonLdVersion;
+import com.apicatalog.jsonld.StringUtils;
 import com.apicatalog.jsonld.document.Document;
 import com.apicatalog.jsonld.http.ProfileConstants;
 import com.apicatalog.jsonld.json.JsonUtils;
@@ -317,7 +318,7 @@ public final class ActiveContextBuilder {
                                     "]. Please use JsonLdOptions.setBase() method to set an absolute IRI.");
                         }       
                         
-                    } else if (!valueString.isBlank()) {
+                    } else if (StringUtils.isNotBlank(valueString)) {
                         throw new JsonLdError(JsonLdErrorCode.INVALID_BASE_IRI);
                     }
 
@@ -341,7 +342,7 @@ public final class ActiveContextBuilder {
 
                     final String valueString = ((JsonString) value).getString();
 
-                    if (valueString.isBlank() || BlankNode.hasPrefix(valueString) || UriUtils.isURI(valueString)) {
+                    if (StringUtils.isBlank(valueString) || BlankNode.hasPrefix(valueString) || UriUtils.isURI(valueString)) {
 
                         String vocabularyMapping =
                                     result
